[tool.poetry]
name = "hmc"
version = "0.0.5"
description = "Hierarchical Multi-Label Classification Network in Pytorch"
authors = ["sette <bruno.sette@ufscar.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = ">=4.66.4"
numpy = ">=1.25.0"
torch = ">=2.2.0"
torchvision = ">=0.16.0"
torchaudio = ">=2.0.0"
pandas = ">=1.5.0"
dataset = ">=1.6.2"
scikit-learn = ">=1.2.2"
lightning = {extras = ["extra"], version = "^2.5.0.post0"}
keras = "^3.9.0"
tensorflow = "^2.19.0"

# Fontes do PyTorch (ajustadas no deploy.sh)
[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
flake8 = "^7.2.0"
black = "^25.1.0"
pylama = "^8.4.1"
isort = "^6.0.1"
pre-commit = "^4.2.0"
